Chart添加今日均价线 ->> 数据落数据库

--- a/LLF_IPS.dproj
+++ b/LLF_IPS.dproj
@@ -29,7 +29,8 @@
     <DelphiCompile Include="LLF_IPS.dpr">
       <MainSource>MainSource</MainSource>
     </DelphiCompile>
-    <DCCReference Include="Chart_Manager\ChartManager.pas" />
+    <DCCReference Include="Chart_Manager\uMyChartManager.pas" />
+    <DCCReference Include="CommonUnits\ChartManager.pas" />
     <DCCReference Include="MainWIN.pas">
       <Form>MainWindow</Form>
     </DCCReference>
